Fix MSVC build error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ if (RMGR_DETECT_BUILD_TESTS)
     if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
         set(RMGR_DETECT_TESTS_EXPECTED_FRONTEND         "\"MSVC\"")
         set(RMGR_DETECT_TESTS_EXPECTED_FRONTEND_VERSION "\"${CMAKE_CXX_COMPILER_VERSION}\"")
-        set(RMGR_DETECT_TESTS_EXPECTED_BACKEND          "\"MSVC")
+        set(RMGR_DETECT_TESTS_EXPECTED_BACKEND          "\"MSVC\"")
         set(RMGR_DETECT_TESTS_EXPECTED_BACKEND_VERSION  "\"${CMAKE_CXX_COMPILER_VERSION}\"")
     elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         set(RMGR_DETECT_TESTS_EXPECTED_FRONTEND         "\"GCC\"")
