Proper detection of MS STL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ if (RMGR_ID_BUILD_TESTS)
     elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux" OR CYGWIN OR MINGW)
         set(RMGR_ID_TESTS_EXPECTED_CPPRT "\"libstdc++\"")
     elseif (CMAKE_SYSTEM_NAME STREQUAL "Windows")
-        set(RMGR_ID_TESTS_EXPECTED_CPPRT "\"MSVCRT\"")
+        set(RMGR_ID_TESTS_EXPECTED_CPPRT "\"MS STL\"")
     else()
         message(FATAL_ERROR "Unsupported/unrecognized C++ library")
     endif()
