--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,28 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.5...3.27)
 
+if (PROJECT_NAME)
+    set(RMGR_ID_IS_TOP_LEVEL 0)
+else()
+    set(RMGR_ID_IS_TOP_LEVEL 1)
+endif()
 
-option(RMGR_ID_BUILD_TESTS  "Whether to build rmgr-identify unit tests" OFF)
+option(RMGR_ID_BUILD_TESTS  "Whether to build rmgr-identify unit tests" ${RMGR_ID_IS_TOP_LEVEL})
 if (RMGR_ID_BUILD_TESTS)
-    set(RMGR_ID_LANGUAGES  CXX)
+    set(RMGR_ID_LANGUAGES  C CXX)
+    include(CheckLanguage)
+    check_language(ISPC)
+    if (CMAKE_ISPC_COMPILER)
+        list(APPEND RMGR_ID_LANGUAGES ISPC)
+    endif()
 else()
     set(RMGR_ID_LANGUAGES  NONE)
 endif()
+
+if (RMGR_ID_IS_TOP_LEVEL AND CMAKE_GENERATOR_TOOLSET MATCHES "_clang_c2$")
+    set(CMAKE_CXX_FLAGS_DEBUG "/Z7")
+    #add_compile_options("$<$<CONFIG:Debug>:/Z7")
+endif()
+
 
 project(rmgr-identify
     VERSION   1.0.0
@@ -22,24 +38,48 @@ target_include_directories(rmgr-identify INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/
 if (RMGR_ID_BUILD_TESTS)
     add_executable(rmgr-identify-tests
         "tests/rmgr-identify-tests.cpp"
-        "tests/rmgr-identify-compiler-tests.cpp"
-        "tests/rmgr-identify-runtime-tests.cpp"
+        "tests/rmgr-identify-tests.h"
+        "tests/rmgr-identify-compiler.cpp"
+        "tests/rmgr-identify-c-runtime.c"
+        "tests/rmgr-identify-cpp-runtime.cpp"
         "include/rmgr/identify-compiler.h"
         "include/rmgr/identify-runtime.h"
     )
     target_link_libraries(rmgr-identify-tests PRIVATE rmgr-identify)
     set_property(DIRECTORY . PROPERTY VS_STARTUP_PROJECT "rmgr-identify-tests")
+    if (CMAKE_CXX_COMPILER_ID MATCHES "(GNU|Clang)")
+        target_compile_options(rmgr-identify-tests PRIVATE
+            "-Wall"
+            "-Wextra"
+            "-Wundef"
+        )
+    elseif (MSVC)
+        target_compile_options(rmgr-identify-tests PRIVATE
+            "/W4"
+            "/w44668" # 'symbol' is not defined as a preprocessor macro, replacing with '0' for 'directives'
+        )
+    endif()
 
     # Identify compiler
     if (MINGW)
         target_link_options(rmgr-identify-tests PRIVATE "-static")
         set(RMGR_ID_TESTS_EXPECTED_VARIANT "\"MinGW\"")
     endif()
-    if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    if (CMAKE_ISPC_COMPILER)
+        set(RMGR_ID_TESTS_EXPECTED_FRONTEND         "\"ISPC\"")
+        set(RMGR_ID_TESTS_EXPECTED_FRONTEND_VERSION "\"${CMAKE_ISPC_COMPILER_VERSION}\"")
+        set(RMGR_ID_TESTS_EXPECTED_BACKEND          "\"LLVM\"")
+        set(RMGR_ID_TESTS_EXPECTED_BACKEND_VERSION  __clang_version__)
+        set_source_files_properties(
+            "tests/rmgr-identify-compiler.cpp"
+            PROPERTIES LANGUAGE ISPC
+        )
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
         set(RMGR_ID_TESTS_EXPECTED_FRONTEND         "\"MSVC\"")
         set(RMGR_ID_TESTS_EXPECTED_FRONTEND_VERSION "\"${CMAKE_CXX_COMPILER_VERSION}\"")
         set(RMGR_ID_TESTS_EXPECTED_BACKEND          "\"MSVC\"")
         set(RMGR_ID_TESTS_EXPECTED_BACKEND_VERSION  "\"${CMAKE_CXX_COMPILER_VERSION}\"")
+        set_property(SOURCE "tests/rmgr-identify-tests.cpp" APPEND PROPERTY COMPILE_DEFINITIONS _CRT_SECURE_NO_WARNINGS)
     elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         set(RMGR_ID_TESTS_EXPECTED_FRONTEND         "\"GCC\"")
         set(RMGR_ID_TESTS_EXPECTED_FRONTEND_VERSION "\"${CMAKE_CXX_COMPILER_VERSION}\"")
@@ -75,6 +115,11 @@ if (RMGR_ID_BUILD_TESTS)
         set(RMGR_ID_TESTS_EXPECTED_BACKEND_VERSION  __clang_version__)
         set(RMGR_ID_TESTS_EXPECTED_VARIANT          "\"ICX\"")
         set(RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION  "\"${CMAKE_CXX_COMPILER_VERSION}\"")
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Borland")
+        set(RMGR_ID_TESTS_EXPECTED_FRONTEND         "\"Borland\"")
+        set(RMGR_ID_TESTS_EXPECTED_FRONTEND_VERSION "\"${CMAKE_CXX_COMPILER_VERSION}\"")
+        set(RMGR_ID_TESTS_EXPECTED_BACKEND          "\"Borland\"")
+        set(RMGR_ID_TESTS_EXPECTED_BACKEND_VERSION  "\"${CMAKE_CXX_COMPILER_VERSION}\"")
     else()
         message(FATAL_ERROR "Unsupported/unrecognized compiler")
     endif()
@@ -116,7 +161,7 @@ if (RMGR_ID_BUILD_TESTS)
     endif()
 
     # Forward info to test program
-    target_compile_definitions(rmgr-identify-tests PRIVATE
+    set_property(SOURCE "tests/rmgr-identify-tests.cpp" APPEND PROPERTY COMPILE_DEFINITIONS
        "EXPECTED_FRONTEND=${RMGR_ID_TESTS_EXPECTED_FRONTEND}"
        "EXPECTED_FRONTEND_VERSION=${RMGR_ID_TESTS_EXPECTED_FRONTEND_VERSION}"
        "EXPECTED_BACKEND=${RMGR_ID_TESTS_EXPECTED_BACKEND}"
@@ -125,15 +170,21 @@ if (RMGR_ID_BUILD_TESTS)
        "EXPECTED_CPPRT=${RMGR_ID_TESTS_EXPECTED_CPPRT}"
     )
     if (DEFINED RMGR_ID_TESTS_EXPECTED_VARIANT)
-        target_compile_definitions(rmgr-identify-tests PRIVATE "EXPECTED_VARIANT=${RMGR_ID_TESTS_EXPECTED_VARIANT}")
+        set_property(SOURCE "tests/rmgr-identify-tests.cpp" APPEND PROPERTY COMPILE_DEFINITIONS "EXPECTED_VARIANT=${RMGR_ID_TESTS_EXPECTED_VARIANT}")
     endif()
     if (DEFINED RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION)
-        target_compile_definitions(rmgr-identify-tests PRIVATE "EXPECTED_VARIANT_VERSION=${RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION}")
+        set_property(SOURCE "tests/rmgr-identify-tests.cpp" APPEND PROPERTY COMPILE_DEFINITIONS "EXPECTED_VARIANT_VERSION=${RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION}")
     elseif (DEFINED RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION_MAJOR)
-        target_compile_definitions(rmgr-identify-tests PRIVATE
+        set_property(SOURCE "tests/rmgr-identify-tests.cpp" APPEND PROPERTY COMPILE_DEFINITIONS
             "EXPECTED_VARIANT_VERSION_MAJOR=${RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION_MAJOR}"
             "EXPECTED_VARIANT_VERSION_MINOR=${RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION_MINOR}"
             "EXPECTED_VARIANT_VERSION_PATCH=${RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION_PATCH}"
         )
     endif()
+
+    include(CTest)
+    add_test(
+        NAME    "rmgr-identify-tests"
+        COMMAND "rmgr-identify-tests"
+    )
 endif()
