--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,16 @@ if (RMGR_ID_BUILD_TESTS)
         set(RMGR_ID_TESTS_EXPECTED_FRONTEND_VERSION "\"${CMAKE_CXX_COMPILER_VERSION}\"")
         set(RMGR_ID_TESTS_EXPECTED_BACKEND          "\"Borland\"")
         set(RMGR_ID_TESTS_EXPECTED_BACKEND_VERSION  "\"${CMAKE_CXX_COMPILER_VERSION}\"")
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "OpenWatcom")
+        string(REGEX MATCH "^[0-9]+" RMGR_ID_WATCOM_VERSION_MAJOR "${CMAKE_CXX_COMPILER_VERSION}")
+        math(EXPR RMGR_ID_WATCOM_VERSION_MAJOR "${RMGR_ID_WATCOM_VERSION_MAJOR}+11")
+        string (REGEX REPLACE "^[0-9]+" "${RMGR_ID_WATCOM_VERSION_MAJOR}" RMGR_ID_WATCOM_VERSION "${CMAKE_CXX_COMPILER_VERSION}")
+        set(RMGR_ID_TESTS_EXPECTED_FRONTEND         "\"Watcom\"")
+        set(RMGR_ID_TESTS_EXPECTED_FRONTEND_VERSION "\"${RMGR_ID_WATCOM_VERSION}\"")
+        set(RMGR_ID_TESTS_EXPECTED_BACKEND          "\"Watcom\"")
+        set(RMGR_ID_TESTS_EXPECTED_BACKEND_VERSION  "\"${RMGR_ID_WATCOM_VERSION}\"")
+        set(RMGR_ID_TESTS_EXPECTED_VARIANT          "\"Open Watcom\"")
+        set(RMGR_ID_TESTS_EXPECTED_VARIANT_VERSION  "\"${CMAKE_CXX_COMPILER_VERSION}\"")
     else()
         message(FATAL_ERROR "Unsupported/unrecognized compiler")
     endif()
@@ -127,6 +137,8 @@ if (RMGR_ID_BUILD_TESTS)
     # Identify C runtime library
     if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
         set(RMGR_ID_TESTS_EXPECTED_CRT "\"glibc\"")
+    elseif (CMAKE_C_COMPILER_ID STREQUAL "OpenWatcom")
+        set(RMGR_ID_TESTS_EXPECTED_CRT "\"Watcom\"")
     elseif (CMAKE_SYSTEM_NAME STREQUAL "Windows")
         set(RMGR_ID_TESTS_EXPECTED_CRT "\"MSVCRT\"")
     elseif (CYGWIN)
@@ -154,6 +166,8 @@ if (RMGR_ID_BUILD_TESTS)
         endif()
     elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux" OR CYGWIN OR MINGW)
         set(RMGR_ID_TESTS_EXPECTED_CPPRT "\"libstdc++\"")
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "OpenWatcom")
+        set(RMGR_ID_TESTS_EXPECTED_CPPRT "\"Watcom\"")
     elseif (CMAKE_SYSTEM_NAME STREQUAL "Windows")
         set(RMGR_ID_TESTS_EXPECTED_CPPRT "\"MS STL\"")
     else()
